--- a/baithuchanh2908.html
+++ b/baithuchanh2908.html
@@ -1,37 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>04</title>
+    <title>login</title>
+    <style>
+        .login {
+            margin: 0 auto;
+            border: 1px solid black;
+            width: max-content;
+            height: max-content;
+            margin-top: 20%;
+            border-radius: 2em;
+            background-color: antiquewhite;
+        }
+
+        .login input[type="text"] {
+            margin-top: 2em;
+        }
+
+        .login input[type="submit"] {
+            margin-left: 38%;
+            margin-bottom: 2em;
+        }
+    </style>
 </head>
+
 <body>
-    <form action="index.php" method="GET">
-        <div>
-            <label for="dv01">Nhập vào kích thước thứ nhất:</label><br>
-            <input type="text" name="dv01"><br>
-            <label for="dv02">Nhập vào kích thước thứ hai:</label><br>
-            <input type="text" name="dv02"><br>
-            <input  type="submit" value="Kết quả"/>
-
-
-
-
+    <form action="../PHP/index.php" method="get">
+        <div class="login">
+            <label for="username"> Tên đăng nhập:</label>
+            <input type="text" name="username"><br>
+            <label for="password">Mật Khẩu</label>
+            <input type="password" name="password"><br>
+            <br><br>
+            <input type="submit" value="Đăng Nhập">
+            <br>
         </div>
+
     </form>
-    <?php
-    if(isset($_GET['dv01']) && isset($_GET['dv02']))
-    { 
-    $dv01 =(float) $_GET["dv01"];
-    $dv02 =(float) $_GET["dv02"];
-    if ($dv01 ==$dv02) {
-        echo"đây là hình vuông";
+    <?php 
+    if(isset($_GET['username'])&& isset($_GET['password'])){
+        $name = $_GET['username'];
+        $pw=$_GET['password'];
+        echo"wellcome" . $name . "có mật khẩu là:". $pw;
     }
-    else
-    echo"dây là hình chữ nhật";
-}
-
-
     ?>
+
 </body>
-</html>
+
+</html
