--- a/baithuchanh2908.html
+++ b/baithuchanh2908.html
@@ -1,52 +1,93 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Trang web chuyển đổi ngoại tệ sang VND</title>
+<style>
+h1 {
+  text-align: center;
+  color: blue;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input {
+  margin: 10px;
+}
+
+button {
+  width: 100px;
+  height: 40px;
+  background-color: green;
+  color: rgb(226, 11, 11);
+  font-size: 20px;
+}
+
+p {
+  text-align: center;
+  font-size: 18px;
+}
+</style>
 </head>
 <body>
-  <h1>Trang web chuyển đổi ngoại tệ sang VND</h1>
-  <p>Dữ liệu tỷ giá quy đổi được lấy từ trang web của Vietcombank</p>
-  <table border="1">
-    <tr>
-      <th>Mã tiền tệ</th>
-      <th>Tên tiền tệ</th>
-      <th>Mua vào</th>
-      <th>Bán ra</th>
-    </tr>
-    <?php
-    // Hiển thị các đơn vị tiền tệ và tỷ giá quy đổi
-    foreach ($currency as $code => $data) {
-      echo "<tr>";
-      echo "<td>$code</td>";
-      echo "<td>{$data['name']}</td>";
-      echo "<td>{$data['buy']}</td>";
-      echo "<td>{$data['sell']}</td>";
-      echo "</tr>";
+<h1>Trang web kiểm tra yêu cầu vào công ty</h1>
+<form id="form">
+  <label for="gender">Giới tính:</label>
+  <select id="gender" name="gender">
+    <option value="Nam">Nam</option>
+    <option value="Nữ">Nữ</option>
+  </select>
+  <label for="weight">Cân nặng (kg):</label>
+  <input id="weight" type="number" name="weight" min="0" max="200">
+  <label for="height">Chiều cao (m):</label>
+  <input id="height" type="number" name="height" min="0" max="3" step="0.01">
+  <button id="submit" type="button">Kiểm tra</button>
+</form>
+<p id="result"></p>
+<script>
+ 
+  var gender = document.getElementById("gender");
+  var weight = document.getElementById("weight");
+  var height = document.getElementById("height");
+  var submit = document.getElementById("submit");
+  var result = document.getElementById("result");
+
+
+  submit.addEventListener("click", function() {
+ 
+    var g = gender.value;
+    var w = Number(weight.value);
+    var h = Number(height.value);
+
+   
+    if (isNaN(w) || isNaN(h)) {
+      result.textContent = "Vui lòng nhập cân nặng và chiều cao của bạn.";
+      result.style.color = "red";
+      return;
     }
-    ?>
-  </table>
-  <form method="post" action="">
-    <p>Nhập số tiền và chọn đơn vị tiền tệ để chuyển đổi sang VND</p>
-    <p>
-      <input type="number" name="amount" value="<?php echo $amount; ?>">
-      <select name="code">
-        <?php
-        // Hiển thị các đơn vị tiền tệ để người dùng chọn
-        foreach ($currency as $code => $data) {
-          $selected = ($code == $code) ? "selected" : "";
-          echo "<option value='$code' $selected>$code</option>";
-        }
-        ?>
-      </select>
-      <input type="submit" value="Chuyển đổi">
-    </p>
-  </form>
-  <?php
-  // Hiển thị kết quả chuyển đổi
-  if ($amount > 0) {
-    echo "<p>$amount $code = $result VND</p>";
-  }
-  ?>
+
+  
+    var pass = false;
+    if (g == "Nam") {
+      if (h > 1.6 && w > 50) {
+        pass = true;
+      }
+    } else if (g == "Nữ") {
+      if (h > 1.5 && w > 40 && w < 70) {
+        pass = true;
+      }
+    }
+
+  
+    if (pass) {
+      result.textContent = "Chúc mừng, bạn đạt yêu cầu vào công ty!";
+      result.style.color = "green";
+    } else {
+      result.textContent = "Rất tiếc, bạn không đạt yêu cầu vào công ty.";
+      result.style.color = "red";
+    }
+  });
+</script>
 </body>
 </html>
